--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -1,3 +1,28 @@
+table#device_table td.codes{
+    width: 6%;
+}
+
+table#device_table td[name="type"]{
+    width: 9%;
+}
+
+table#device_table td[name="model"]{
+    width: 20%
+}
+ 
+
+table#device_table td[name="type"]{
+    width: 20%;
+}
+
+table#device_table td[name="properties"]{
+    width: 30%;
+}
+
+table#device_table td.ctrl{
+    width: 5%;
+}
+
 input[type="text"]{
     margin-left: -12px;
     width: calc(100% + 12px);
