ADD: Type select is added to the device form.

--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -18,7 +18,13 @@ div#device-table .cell{
     padding: 12px;
 }
 
-input[type="text"]{
+div#device-table input[type="text"]{
+    margin-left: -12px;
+    width: calc(100% + 12px);
+}
+
+div#device-table select{
+    padding-left: 8px;
     margin-left: -12px;
     width: calc(100% + 12px);
 }
