--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -39,10 +39,9 @@
 
 .table .additional-info{
     width: 90%;
-    height: 0;
 
     margin: 0 auto;
-    padding: 0;
+    padding: 0 0 24px 0;
 
     overflow: hidden;
 }
