--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -1,7 +1,3 @@
-.table-title{
-    font-weight: bold;
-}
-
 .table{
     width: 100%;
     padding: 7.5px;
@@ -16,6 +12,7 @@
 
 .table .table-row{
     border-bottom: 1px solid #6c757d;
+    overflow: hidden;
 }
 
 .table-row:nth-of-type(odd){
@@ -36,12 +33,16 @@
     margin-left: -12px;
     width: calc(100% + 12px);
 }
+/* additional info */
 
-.table .additional-info{
+.additional-info{
     width: 90%;
+    margin: 12px auto;
+    padding: 24px 0;
+}
 
+.additional-info .section .title{
     margin: 0 auto;
-    padding: 0 0 24px 0;
-
-    overflow: hidden;
+    padding: 0;
+    font-weight: bold;
 }
