--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -1,38 +1,39 @@
+/* table */
 .table{
     width: 100%;
-    padding: 7.5px;
+    padding: 0 7.5px;
 }
 
-.table > div[name="head"]{
-    font-weight: bold;
-    border: 1px solid #6c757d;
-    border-left: none;
-    border-right: none;
-}
+    .table > div[name="head"]{
+        font-weight: bold;
+        border: 1px solid #6c757d;
+        border-left: none;
+        border-right: none;
+    }
 
-.table .table-row{
-    border-bottom: 1px solid #6c757d;
-    overflow: hidden;
-}
+    .table .table-row{
+        border-bottom: 1px solid #6c757d;
+        overflow: hidden;
+    }
 
-.table-row:nth-of-type(odd){
-    background-color: rgba(0,0,0,.05);
-}
+    .table-row:nth-of-type(odd){
+        background-color: rgba(0, 0, 0, 0.05);
+    }
 
-.table .cell{
-    padding: 12px;
-}
+        .table .cell{
+            padding: 12px;
+        }
 
-.table input[type="text"]{
-    margin-left: -12px;
-    width: calc(100% + 12px);
-}
+        .table input[type="text"]{
+            margin-left: -12px;
+            width: calc(100% + 12px);
+        }
 
-.table select{
-    padding-left: 8px;
-    margin-left: -12px;
-    width: calc(100% + 12px);
-}
+        .table select{
+            padding-left: 8px;
+            margin-left: -12px;
+            width: calc(100% + 12px);
+        }
 /* additional info */
 
 .additional-info{
@@ -41,8 +42,28 @@
     padding: 24px 0;
 }
 
-.additional-info .section .title{
-    margin: 0 auto;
-    padding: 0;
-    font-weight: bold;
+.additional-info .section{
+    margin: 12px auto;
 }
+
+    .additional-info .section-title{
+        margin-bottom: 12px;
+    }
+
+        .additional-info .section-title > .line{
+            border-top: 2px solid #6c757d;
+        }
+
+        .additional-info .section-title > p{
+            margin: -12px auto 0;
+            padding: 0 12px;
+            font-weight: bold;
+        }
+
+.additional-info .table{
+    background-color: rgba(255, 255, 255, 0.075);
+}
+
+    .additional-info .table .table-row:nth-of-type(odd){
+        background-color: rgba(0, 0, 0, 0.1);
+    }
