ADD: Control cell is made hideable.

--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -16,6 +16,10 @@
         overflow: hidden;
     }
 
+        .table .table-row .main-info{
+            min-height: 53px;
+        }
+
     .table-row:nth-of-type(odd){
         background-color: rgba(0, 0, 0, 0.05);
     }
