UPD: Disabled pass hashing when it is attempting credentials. Registration and Logining works.

--- a/resources/css/welcome.css
+++ b/resources/css/welcome.css
@@ -6,3 +6,7 @@
 #auth{
     background-color: rgba(255, 255, 255, 0.075);
 }
+
+.tab input:checked + .label{
+    background-color: rgb(63, 71, 78);
+}
