--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -1,7 +1,17 @@
+/* tab */
 .tab input:checked + .label{
     background-color: rgb(63, 71, 78);
 }
 
 .tab input:disabled + .label{
     color: rgba(128, 128, 128, 0.25)!important;
+}
+
+/* section */
+.section{
+    margin: 0 auto;
+}
+
+.section div[name="title"]{
+    font-weight: bold;
 }
