--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -53,20 +53,6 @@
     padding: 24px 0;
 }
 
-    .additional-info .section{
-        margin: 0 auto;
-    }
-
-        .additional-info .section .title > .line{
-            border-top: 2px solid #6c757d;
-        }
-
-        .additional-info .section .title > p{
-            margin: -12px auto 0;
-            padding: 0 12px;
-            font-weight: bold;
-        }
-
 .additional-info .table{
     background-color: rgba(255, 255, 255, 0.075);
 }
@@ -75,7 +61,9 @@
         background-color: rgba(0, 0, 0, 0.1);
     }
 
-    .section.comment .comment-content{
-        min-height: 48px;
+    .field .text{
+        min-height: 102px;
+        width: 100%;
         background-color: rgba(255, 255, 255, 0.075);
+        border: 1px solid #6c757d;
     }
