--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -1,57 +1,14 @@
-/* table */
-.table{
-    width: 100%;
-    padding: 0 7.5px;
+/* device table */
+
+#device-table .info[name="identification_code"]:before{
+    content: '(';
 }
 
-    .table > div[name="head"]{
-        font-weight: bold;
-        border: 1px solid #6c757d;
-        border-left: none;
-        border-right: none;
-    }
+#device-table .info[name="identification_code"]:after{
+    content: ')';
+}
 
-    .table .table-row{
-        border-bottom: 1px solid #6c757d;
-        overflow: hidden;
-    }
-
-        .table .table-row .main-info{
-            min-height: 53px;
-        }
-
-    .table-row:nth-of-type(odd){
-        background-color: rgba(0, 0, 0, 0.05);
-    }
-
-        .table .cell{
-            padding: 12px;
-        }
-
-        .table input,
-        .table select{
-            margin-left: -12px;
-            width: calc(100% + 12px);
-        }
-
-        .table select{
-            padding-left: 8px;
-        }
-        
-        .info[name="identification_code"]:before{
-            content: '(';
-        }
-
-        .info[name="identification_code"]:after{
-            content: ')';
-        }
 /* additional info */
-
-.additional-info{
-    width: 90%;
-    margin: auto;
-    padding: 24px 0;
-}
 
 .additional-info .table{
     background-color: rgba(255, 255, 255, 0.075);
@@ -59,11 +16,4 @@
 
     .additional-info .table .table-row:nth-of-type(odd){
         background-color: rgba(0, 0, 0, 0.1);
-    }
-
-    .field .text{
-        min-height: 102px;
-        width: 100%;
-        background-color: rgba(255, 255, 255, 0.075);
-        border: 1px solid #6c757d;
     }
