--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -10,10 +10,10 @@
 
 /* additional info */
 
-.additional-info .table{
+/* .additional-info .table{
     background-color: rgba(255, 255, 255, 0.075);
 }
 
     .additional-info .table .table-row:nth-of-type(odd){
         background-color: rgba(0, 0, 0, 0.1);
-    }
+    } */
