--- a/resources/css/devices.css
+++ b/resources/css/devices.css
@@ -8,6 +8,10 @@
     content: ')';
 }
 
+#device-table .main-info{
+    min-height: 53px;
+}
+
 /* additional info */
 
 /* .additional-info .table{
